--- a/project/index.html
+++ b/project/index.html
@@ -3,9 +3,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Html-Main-Page</title>
-    
+
 </head>
 <body>
-    
+    <div style="color: #e9700e;"></div>
 </body>
 </html>
