adding css,js + div boxes

--- a/project/index.html
+++ b/project/index.html
@@ -3,9 +3,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Html-Main-Page</title>
-
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+    <div id="start_side"></div>
+    <div id="savedGames_side"></div>
+    <div id="world_side"></div>
+    <div id="shop_side"></div>
+    <div id="saloon_side"></div>
     
 </body>
 </html>
