--- a/project/index.html
+++ b/project/index.html
@@ -6,11 +6,11 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <div id="start_side"></div>
-    <div id="savedGames_side"></div>
-    <div id="world_side"></div>
-    <div id="shop_side"></div>
-    <div id="saloon_side"></div>
-    
+    <div class="sideBoxes" id="start_side"></div>
+    <div class="sideBoxes" id="savedGames_side"></div>
+    <div class="sideBoxes" id="world_side"></div>
+    <div class="sideBoxes" id="shop_side"></div>
+    <div class="sideBoxes" id="saloon_side"></div>
+
 </body>
 </html>
