--- a/project/index.html
+++ b/project/index.html
@@ -10,11 +10,13 @@
     <div class="sideBoxes" id="start_side">
         <div id="buttonBox_start">
             <div id="buttonSettings_start">
-                <img src="./medien/items/settings.png" alt="s">
+                <img class="startButton" src="./medien/items/settings.png" alt="s">
             </div>
-            <div id="gameName_start"></div>
+            <div id="gameName_start">
+                <img id="logoStart" src="./medien/items/saloonLogo.png" alt="e">
+            </div>
             <div id="buttonPlay_start">
-                <img id="buttonPlayImg" onmouseover="loadPlayButton()" onmouseout="unLoadPlayButton()" src="./medien/items/revolver (2).gif" alt="button">
+                <img id="buttonPlayImg" class="startButton" onmouseover="loadPlayButton()" onmouseout="unLoadPlayButton()" src="./medien/items/revolver (2).gif" alt="button">
             </div>
         </div>
     </div>
