--- a/project/index.html
+++ b/project/index.html
@@ -10,18 +10,20 @@
     <div class="sideBoxes" id="start_side">
         <div id="buttonBox_start">
             <div id="buttonSettings_start">
-                <img class="startButton" src="./medien/items/settings.png" alt="s">
+                <img onclick="switchToSettings()" class="startButton" src="./medien/items/settings.png" alt="s">
             </div>
             <div id="gameName_start">
                 <img id="logoStart" src="./medien/items/saloonLogo.png" alt="e">
             </div>
             <div id="buttonPlay_start">
-                <img id="buttonPlayImg" class="startButton" onmouseover="loadPlayButton()" onmouseout="unLoadPlayButton()" src="./medien/items/revolver (2).gif" alt="button">
+                <img onclick="switchToSave()" id="buttonPlayImg" class="startButton" onmouseover="loadPlayButton()" onmouseout="unLoadPlayButton()" src="./medien/items/revolver (2).gif" alt="button">
             </div>
         </div>
     </div>
+    <div class="sideBoxes" id="settings_side"></div>
     <div class="sideBoxes" id="savedGames_side"></div>
     <div class="sideBoxes" id="world_side"></div>
+    <div class="sideBoxes" id="world_side_options"></div>
     <div class="sideBoxes" id="shop_side"></div>
     <div class="sideBoxes" id="saloon_side"></div>
 
