--- a/project/index.html
+++ b/project/index.html
@@ -20,7 +20,18 @@
             </div>
         </div>
     </div>
-    <div class="sideBoxes" id="settings_side"></div>
+    <div class="sideBoxes" id="settings_side">
+        <h1 class="title">Settings:</h1>
+        <div id="layoutBox_settings">
+            <div class="settingsBox">
+                <h1>HowTo:</h1>
+            </div>
+            <div class="settingsBox">
+                <h1>SoundSettings:</h1>
+            </div>
+        </div>
+        <div class="button" onclick="switchToStart()">Back</div>
+    </div>
     <div class="sideBoxes" id="savedGames_side"></div>
     <div class="sideBoxes" id="world_side"></div>
     <div class="sideBoxes" id="world_side_options"></div>
