settingsBox update ;for multible usages of the css Code

--- a/project/index.html
+++ b/project/index.html
@@ -23,10 +23,10 @@
     <div class="sideBoxes" id="settings_side">
         <h1 class="title">Settings:</h1>
         <div id="layoutBox_settings">
-            <div class="settingsBox">
+            <div class="classicBox" style="height: 60vh; width: 37vw;">
                 <h1>HowTo:</h1>
             </div>
-            <div class="settingsBox">
+            <div class="classicBox" style="height: 60vh; width: 37vw;">
                 <h1>SoundSettings:</h1>
             </div>
         </div>
