--- a/project/index.html
+++ b/project/index.html
@@ -5,6 +5,9 @@
     <title>Html-Main-Page</title>
     <link rel="stylesheet" href="./css/style.css">
     <script src="./JS/main.js"defer></script>
+    <script src="./JS/keyevents.js"defer></script>
+    <script src="./JS/player.js"defer></script>
+    <script src="./JS/detectCollisions.js"defer></script>
 </head>
 <body>
     <div class="sideBoxes" id="start_side">
