--- a/project/index.html
+++ b/project/index.html
@@ -53,7 +53,11 @@
         </div>
         <div class="button" onclick="switchToStart()">Back</div>
     </div>
-    <div class="sideBoxes" id="world_side"></div>
+    <div class="sideBoxes" id="world_side">
+        <div id="playerContainer">
+            <img id="playerSprite" src="./medien/sprites/sprite0.png">
+        </div>
+    </div>
     <div class="sideBoxes" id="world_side_options"></div>
     <div class="sideBoxes" id="shop_side"></div>
     <div class="sideBoxes" id="saloon_side"></div>
