--- a/project/index.html
+++ b/project/index.html
@@ -55,8 +55,8 @@
     </div>
     <div class="sideBoxes" id="world_side">
         <div id="playerContainer">
-            <img id="playerSprite" src="./medien/sprites/sprite0.png">
-        </div>
+            <div id="spriteImg"></div>
+        </div>        
     </div>
     <div class="sideBoxes" id="world_side_options"></div>
     <div class="sideBoxes" id="shop_side"></div>
