added imgs to the products

--- a/project/index.html
+++ b/project/index.html
@@ -68,6 +68,7 @@
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
                     <h2>Hut</h2>
+                    <img src="./medien/items/hat.png" alt="g" style="width: 10vw; height: auto;">
                     <h5>Ein schicker Hut fördert Respekt und schützt vor der Sonne.</h5>
                     <p>Dieser Hut besteht aus edelstem Leder umwickelt mit einem Seidetuch. Er ist Handgefertigt und passt perfekt auf jeden Kopf.</p>
                     <img src="./medien/items/arrow.png" alt="arrow" style="width: 2vw; height: auto;">
@@ -76,6 +77,7 @@
                 </div>
                 <div class="swiper-slide">
                     <h2>Stiefel</h2>
+                    <img src="./medien/items/boots.png" alt="g" style="width: 10vw; height: auto;">
                     <h5>Mit gutem Schuhwerk läuft es sich besser!</h5>
                     <p>Diese Cowboy-Stiefel sind aus echtem Kuhleder gefertigt und mit typischen Metallsporren ausgestattet. Sie schaun nicht nur stylisch aus sie haben auch angenehme Effekte:</p>
                     <img src="./medien/items/arrow.png" alt="arrow" style="width: 2vw; height: auto;">
@@ -84,7 +86,8 @@
                     <button>Kaufen</button>
                 </div>
                 <div class="swiper-slide">
-                    <h2>Gun & Belt</h2>
+                    <h2>Revolver & Gürtel</h2>
+                    <img src="./medien/items/gunAndBelt.png" alt="g" style="width: 10vw; height: auto;">
                     <h5>Eine Waffe am Gürtel jagt selbst den härtesten Männern einen Schrecken ein.</h5>
                     <p>Dieser edle Revolver schützt nicht nur vor wilden Tieren er verleiht dir auch eine Menge Respekt. Selbst die fießesten Cowboys und Saloonführer werden dich bemerken wenn du mit dieser Waffe am Gürtel auftauchst. Gefertigt ist dieses Einzelstück aus einer äußert beständigen Legierung, was sie sehr langlebig macht. Der Griff besteht aus echtem Schlangenleder aus den Bergregionen...</p>
                     <img src="./medien/items/arrow.png" alt="arrow" style="width: 2vw; height: auto;">
