Shop update:  Store item background, MoneyDisplayer + function to refresh money+ add or subb money

--- a/project/index.html
+++ b/project/index.html
@@ -63,7 +63,10 @@
     </div>
     <div class="sideBoxes" id="world_side_options"></div>
     <div class="sideBoxes" id="shop_side">
-        
+        <div id="moneyDisplay">
+            <p id="moneyDisplayNumber" style="margin-top: 0.1vh;">0</p>
+            <img src="./medien/items/coin1.png" alt="vv" style="width: 1vw; height: auto; ">
+        </div>
         <div class="swiper mySwiper" style="margin-right: 55vw;">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
