--- a/project/index.html
+++ b/project/index.html
@@ -57,11 +57,11 @@
         <div onclick="switchToShop()">To Shop[deleat later]</div>
     </div>
     <div class="sideBoxes" id="world_side">
-        <div id="map">
-            <div id="playerContainer">
-                <div id="spriteImg"></div>
-            </div> 
-        </div>    
+        <div id="map"></div> 
+        <div id="playerContainer">
+            <div id="spriteImg"></div>
+        </div> 
+           
     </div>
     <div class="sideBoxes" id="world_side_options"></div>
     <div class="sideBoxes" id="shop_side">
