fixing problems with: choosing startposition, getting to start game

--- a/project/index.html
+++ b/project/index.html
@@ -57,7 +57,9 @@
         <div onclick="switchToShop()">To Shop[deleat later]</div>
     </div>
     <div class="sideBoxes" id="world_side">
-        <div id="map"></div> 
+        <div id="map">
+            <!--<img class="mapObjekts" style="position: relative;left: 1vw; top: 1vh;width: 1vw;" src="./medien/map/basicHorse.gif" alt="horse">-->
+        </div> 
         <div id="playerContainer">
             <div id="spriteImg"></div>
         </div> 
