loadingScreen to hide buggs

--- a/project/index.html
+++ b/project/index.html
@@ -4,9 +4,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Html-Main-Page</title>
     <link rel="stylesheet" href="./css/style.css">
+    <script src="./JS/player.js"defer></script>
     <script src="./JS/main.js"defer></script>
     <script src="./JS/keyevents.js"defer></script>
-    <script src="./JS/player.js"defer></script>
     <script src="./JS/detectCollisions.js"defer></script>
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
@@ -57,6 +57,9 @@
         <div onclick="switchToShop()">To Shop[deleat later]</div>
     </div>
     <div class="sideBoxes" id="world_side">
+        <div id="loadingSc" >
+            <img id="loadingIcon" src="./medien/items/logo.png" alt="lo" >
+        </div>
         <div id="map">
             <!--<img class="mapObjekts" style="position: relative;left: 1vw; top: 1vh;width: 1vw;" src="./medien/map/basicHorse.gif" alt="horse">-->
         </div> 
