--- a/project/index.html
+++ b/project/index.html
@@ -4,12 +4,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Html-Main-Page</title>
     <link rel="stylesheet" href="./css/style.css">
+    <script src="https://achievements.anthony.media/achievement-popup.js"></script>
     <script src="./JS/player.js"defer></script>
     <script src="./JS/main.js"defer></script>
     <script src="./JS/keyevents.js"defer></script>
     <script src="./JS/detectCollisions.js"defer></script>
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+
 </head>
 <body>
     <div class="sideBoxes" id="start_side">
@@ -66,6 +68,16 @@
         <div id="playerContainer">
             <div id="spriteImg"></div>
         </div> 
+        <div id="playerButtons">
+            <div class="achievement-toast" id="achievement">
+                <img src="./medien/items/archivement.png" alt="Icon">
+                <div class="achievement-text">
+                  <div class="achievement-title">Erfolg!</div>
+                  <div class="achievement-desc">Du hast ein neues Level freigeschaltet!</div>
+                </div>
+            </div>
+        </div>
+        
            
     </div>
     <div class="sideBoxes" id="world_side_options"></div>
