--- a/project/index.html
+++ b/project/index.html
@@ -95,6 +95,7 @@
                     <p>Dieser Hut besteht aus edelstem Leder umwickelt mit einem Seidetuch. Er ist Handgefertigt und passt perfekt auf jeden Kopf.</p>
                     <img src="./medien/items/arrow.png" alt="arrow" style="width: 2vw; height: auto;">
                     <p>Bauern und Tierhalter legen oft viel wert auf einen schönen Hut</p>
+                    <div class="priceDisplay"><h2>5</h2><img  style="width: 2.5vw;" src="./medien/items/coin2.png" alt="c"></div>
                     <button>Kaufen</button>
                 </div>
                 <div class="swiper-slide">
@@ -105,6 +106,7 @@
                     <img src="./medien/items/arrow.png" alt="arrow" style="width: 2vw; height: auto;">
                     <p>Steigert deine Laufgeschwindigkeit um 15%</p>
                     <p>Steigert die Laufgeschwindigkeit deines Pferdes um 5%</p>
+                    <div class="priceDisplay"><h2>15</h2><img  style="width: 2.5vw;" src="./medien/items/coin2.png" alt="c"></div>
                     <button>Kaufen</button>
                 </div>
                 <div class="swiper-slide">
@@ -114,6 +116,7 @@
                     <p>Dieser edle Revolver schützt nicht nur vor wilden Tieren er verleiht dir auch eine Menge Respekt. Selbst die fießesten Cowboys und Saloonführer werden dich bemerken wenn du mit dieser Waffe am Gürtel auftauchst. Gefertigt ist dieses Einzelstück aus einer äußert beständigen Legierung, was sie sehr langlebig macht. Der Griff besteht aus echtem Schlangenleder aus den Bergregionen...</p>
                     <img src="./medien/items/arrow.png" alt="arrow" style="width: 2vw; height: auto;">
                     <p>Dein Ansehen in dieser Region steigt</p>
+                    <div class="priceDisplay"><h2>30</h2><img  style="width: 2.5vw;" src="./medien/items/coin2.png" alt="c"></div>
                     <button>Kaufen</button>
                 </div>
             </div>
