added buying function to game

--- a/project/index.html
+++ b/project/index.html
@@ -96,8 +96,9 @@
                     <img src="./medien/items/arrow.png" alt="arrow" style="width: 2vw; height: auto;">
                     <p>Bauern und Tierhalter legen oft viel wert auf einen schönen Hut</p>
                     <div class="priceDisplay"><h2>5</h2><img  style="width: 2.5vw;" src="./medien/items/coin2.png" alt="c"></div>
-                    <button>Kaufen</button>
+                    <div id="butSh1" class="button" style="margin-left: 37%; bottom: 1vh;" onclick="buyItem(1)">Kaufen</div>
                 </div>
+
                 <div class="swiper-slide">
                     <h2>Stiefel</h2>
                     <img src="./medien/items/boots.png" alt="g" style="width: 10vw; height: auto;">
@@ -107,8 +108,10 @@
                     <p>Steigert deine Laufgeschwindigkeit um 15%</p>
                     <p>Steigert die Laufgeschwindigkeit deines Pferdes um 5%</p>
                     <div class="priceDisplay"><h2>15</h2><img  style="width: 2.5vw;" src="./medien/items/coin2.png" alt="c"></div>
-                    <button>Kaufen</button>
+                    <div id="butSh2" class="button" style="margin-left: 37%; bottom: 1vh;" onclick="buyItem(2)">Kaufen</div>
+
                 </div>
+
                 <div class="swiper-slide">
                     <h2>Revolver & Gürtel</h2>
                     <img src="./medien/items/gunAndBelt.png" alt="g" style="width: 10vw; height: auto;">
@@ -117,7 +120,8 @@
                     <img src="./medien/items/arrow.png" alt="arrow" style="width: 2vw; height: auto;">
                     <p>Dein Ansehen in dieser Region steigt</p>
                     <div class="priceDisplay"><h2>30</h2><img  style="width: 2.5vw;" src="./medien/items/coin2.png" alt="c"></div>
-                    <button>Kaufen</button>
+                    <div id="butSh3" class="button" style="margin-left: 37%; bottom: 1vh;" onclick="buyItem(3)">Kaufen</div>
+  
                 </div>
             </div>
         </div>
