Minimap + minimapfunctions + infobox + moneyRefresh function changes

--- a/project/index.html
+++ b/project/index.html
@@ -68,6 +68,13 @@
         <div id="playerContainer">
             <div id="spriteImg"></div>
         </div> 
+        <div id="miniMapBox">
+            <img src="./medien/map/miniMap.png" alt="mm">
+            <div id="crossMap"></div>
+            <div id="dotMap"></div>
+            <div id="goalDotMap"></div>
+        </div>
+        <div id="infoBoxMap">Level: 0/3 | Cash: 0</div>
         <div id="playerButtons">
             <div class="achievement-toast" id="achievement">
                 <img src="./medien/items/archivement.png" alt="Icon">
