change to Horse Button

--- a/project/index.html
+++ b/project/index.html
@@ -75,6 +75,7 @@
             <div id="goalDotMap"></div>
         </div>
         <div id="infoBoxMap">Level: 0/3 | Cash: 0</div>
+        <img id="changeButton" onclick="changedButton()" src="./medien/items/hatButton.png" alt="g">
         <div id="playerButtons">
             <div class="achievement-toast" id="achievement">
                 <img src="./medien/items/archivement.png" alt="Icon">
