--- a/project/index.html
+++ b/project/index.html
@@ -64,7 +64,17 @@
         </div>
         <div id="map">
             <img class="mapObjekts" id="Objekt1" style="width: 1000px; height: auto; top: 7000px; left: 3000px;" src="./medien/items/mountain.png" alt="w">
-        
+            <img class="mapObjekts" id="Objekt2" style="width: 500px; height: auto; top: 3400px; left: 5500px;" src="./medien/items/tent.png" alt="w">
+            <img class="mapObjekts" id="Objekt3" style="width: 800px; height: auto; top: 2000px; left: 6000px;" src="./medien/items/oasis.png" alt="w">
+            <img class="mapObjekts" id="Objekt4" style="width: 750px; height: auto; top: 9000px; left: 4000px;" src="./medien/items/oldbuilding.png" alt="w">
+            <img class="mapObjekts" id="Objekt5" style="width: 500px; height: auto; top: 8000px; left: 2000px;" src="./medien/items/thing.png" alt="w">
+            <img class="mapObjekts" id="Objekt6" style="width: 100px; height: auto; top: 2300px; left: 1000px;" src="./medien/items/stone.png" alt="w">
+            <img class="mapObjekts" id="Objekt7" style="width: 120px; height: auto; top: 4500px; left: 4000px;" src="./medien/items/stone.png" alt="w">
+            <img class="mapObjekts" id="Objekt8" style="width: 100px; height: auto; top: 8300px; left: 4500px;" src="./medien/items/stone.png" alt="w">
+            <img class="mapObjekts" id="Objekt9" style="width: 400px; height: auto; top: 6300px; left: 2700px;" src="./medien/items/trees.png" alt="w">
+            <img class="mapObjekts" id="Objekt10" style="width: 500px; height: auto; top: 1300px; left: 3000px;" src="./medien/items/buildingRow2.png" alt="w">
+            <img class="mapObjekts" id="Objekt11" style="width: 500px; height: auto; top: 1350px; left: 3800px;" src="./medien/items/buildingRow1.png" alt="w">
+
         </div> 
         <div id="playerContainer">
             <div id="spriteImg"></div>
@@ -75,7 +85,7 @@
             <img src="./medien/map/miniMap.png" alt="mm">
             <div id="crossMap"></div>
             <div id="dotMap"></div>
-            
+            <div id="goalDotMap"></div>
         </div>
         <div id="infoBoxMap">Level: 0/3 | Cash: 0</div>
         <img id="changeButton" onclick="changedButton()" src="./medien/items/hatButton.png" alt="g">
