saloon + stry beginning

--- a/project/index.html
+++ b/project/index.html
@@ -73,7 +73,8 @@
             <img class="mapObjekts" id="Objekt8" style="width: 100px; height: auto; top: 8300px; left: 4500px;" src="./medien/items/stone.png" alt="w">
             <img class="mapObjekts" id="Objekt9" style="width: 400px; height: auto; top: 6300px; left: 2700px;" src="./medien/items/trees.png" alt="w">
             <img class="mapObjekts" id="Objekt10" style="width: 500px; height: auto; top: 1300px; left: 3000px;" src="./medien/items/buildingRow2.png" alt="w">
-            <img class="mapObjekts" id="Objekt11" style="width: 500px; height: auto; top: 1350px; left: 3800px;" src="./medien/items/buildingRow1.png" alt="w">
+            <img class="mapObjekts" id="Objekt11" style="width: 500px; height: auto; top: 1350px; left: 4200px;" src="./medien/items/buildingRow1.png" alt="w">
+            <img class="mapObjekts" id="Objekt12" style="width: 750px; height: auto; top: 350px; left: 3500px;" src="./medien/items/saloon.png" alt="w">
 
         </div> 
         <div id="playerContainer">
@@ -89,7 +90,7 @@
         </div>
         <div id="infoBoxMap">Level: 0/3 | Cash: 0</div>
         <img id="changeButton" onclick="changedButton()" src="./medien/items/hatButton.png" alt="g">
-        <div class="button" style=" position: fixed; bottom:  2vh; right: 2.15vh; width: 12.7vw;" onclick="openOptions()">Options</div>
+        <div class="button" style=" position: fixed; bottom:  2vh; right: 2.15vh; width: 12.7vw; z-index: 9999;" onclick="openOptions()">Options</div>
         <div id="playerButtons">
             <div class="achievement-toast" id="achievement">
                 <img src="./medien/items/archivement.png" alt="Icon">
