--- a/project/index.html
+++ b/project/index.html
@@ -76,6 +76,7 @@
             <img class="mapObjekts" id="Objekt11" style="width: 500px; height: auto; top: 1350px; left: 4200px;" src="./medien/items/buildingRow1.png" alt="w">
             <img class="mapObjekts" id="Objekt12" style="width: 750px; height: auto; top: 350px; left: 3500px;" src="./medien/items/saloon.png" alt="w">
             <img class="mapObjekts" id="Objekt13" style="width: 100px; height: auto; top: 9300px; left: 4350px;" src="./medien/cha/character1.png" alt="w">
+            <img class="mapObjekts" id="Objekt14" style="width: 100px; height: auto; top: 5300px; left: 3350px;" src="./medien/items/storeBui.png" alt="w">
 
         </div> 
         <div id="playerContainer">
@@ -177,14 +178,24 @@
     <div class="sideBoxes" id="saloon_side"></div>
 
     <div class="sideBoxes" id="minigame1_geier">
-        <div id="m1_message">Wähle eine Karte</div>
+        <div id="m1_message">Choose a card bonehead...</div>
         <div id="m1_cards">
-          <div class="m1_card" data-index="0">🂠</div>
-          <div class="m1_card" data-index="1">🂠</div>
-          <div class="m1_card" data-index="2">🂠</div>
+          <div class="m1_card" data-index="0"></div>
+          <div class="m1_card" data-index="1"></div>
+          <div class="m1_card" data-index="2"></div>
         </div>
       </div>
 
-    <div class="sideBoxes" id="blurDiv"></div>
+    <div class="sideBoxes" id="blurDiv">
+        <div id="mesBoxBlur">
+            <div class="speech-bubble">
+                <h1 id="convoTxt1">Hey there, Bonehead!</h1>
+                <h1 id="convoTxt2">Wanna earn some money?</h1>
+                <h1 id="convoTxt3">Lets play a little game...</h1>
+                <h1 id="convoTxt4">[STRG]</h1>
+            </div>
+        </div>
+        <div id="chaBoxBlur"></div>
+    </div>
 </body>
 </html>
