--- a/project/index.html
+++ b/project/index.html
@@ -76,8 +76,9 @@
             <img class="mapObjekts" id="Objekt11" style="width: 500px; height: auto; top: 1350px; left: 4200px;" src="./medien/items/buildingRow1.png" alt="w">
             <img class="mapObjekts" id="Objekt12" style="width: 750px; height: auto; top: 350px; left: 3500px;" src="./medien/items/saloon.png" alt="w">
             <img class="mapObjekts" id="Objekt13" style="width: 100px; height: auto; top: 9300px; left: 4350px;" src="./medien/cha/character1.png" alt="w">
-            <img class="mapObjekts" id="Objekt14" style="width: 100px; height: auto; top: 5300px; left: 3350px;" src="./medien/items/storeBui.png" alt="w">
-
+            <img class="mapObjekts" id="Objekt14" style="width: 600px; height: auto; top: 5300px; left: 3350px;" src="./medien/items/storeBui.png" alt="w">
+            <img class="mapObjekts" id="Objekt15" style="width: 100px; height: auto; top: 9300px; left: 4350px;" src="./medien/cha/character2.png" alt="w">
+     
         </div> 
         <div id="playerContainer">
             <div id="spriteImg"></div>
