--- a/project/index.html
+++ b/project/index.html
@@ -77,7 +77,9 @@
             <img class="mapObjekts" id="Objekt12" style="width: 750px; height: auto; top: 350px; left: 3500px;" src="./medien/items/saloon.png" alt="w">
             <img class="mapObjekts" id="Objekt13" style="width: 100px; height: auto; top: 9300px; left: 4350px;" src="./medien/cha/character1.png" alt="w">
             <img class="mapObjekts" id="Objekt14" style="width: 600px; height: auto; top: 5300px; left: 3350px;" src="./medien/items/storeBui.png" alt="w">
-            <img class="mapObjekts" id="Objekt15" style="width: 100px; height: auto; top: 9300px; left: 4350px;" src="./medien/cha/character2.png" alt="w">
+            <img class="mapObjekts" id="Objekt15" style="width: 100px; height: auto; top: 5200px; left: 6050px;" src="./medien/cha/character2.png" alt="w">
+            <img class="mapObjekts" id="Objekt16" style="width: 400px; height: auto; top: 5100px; left: 6150px;" src="./medien/map/basicHorse.gif" alt="w">
+
      
         </div> 
         <div id="playerContainer">
@@ -181,12 +183,20 @@
     <div class="sideBoxes" id="minigame1_geier">
         <div id="m1_message">Choose a card bonehead...</div>
         <div id="m1_cards">
-          <div class="m1_card" data-index="0"></div>
-          <div class="m1_card" data-index="1"></div>
-          <div class="m1_card" data-index="2"></div>
+            <div class="m1_card" data-index="0"></div>
+            <div class="m1_card" data-index="1"></div>
+            <div class="m1_card" data-index="2"></div>
         </div>
-      </div>
-
+    </div>
+    <div class="sideBoxes" id="minigame2_farmer">
+        <div id="m2_gameArea">
+            <div id="m2_barContainer">
+                <div id="m2_targetZone"></div>
+                <div id="m2_powerBar"></div>
+            </div>
+            <div id="m2_result">Press and hold [STRG]</div>
+        </div>
+    </div>
     <div class="sideBoxes" id="blurDiv">
         <div id="mesBoxBlur">
             <div class="speech-bubble">
