--- a/project/index.html
+++ b/project/index.html
@@ -173,7 +173,7 @@
                 </div>
             </div>
         </div>
-        <div class="button" style="bottom: 2vh; margin-left: 85vw;" onclick="switchToPlay()">Leave</div>        
+        <div class="button" style="bottom: 2vh; margin-left: 85vw;" onclick="switchToPlay(2)">Leave</div>        
     
     </div>
     <div class="sideBoxes" id="world_side_options"></div>
@@ -190,6 +190,7 @@
     </div>
     <div class="sideBoxes" id="minigame2_farmer">
         <div id="m2_gameArea">
+            <img id="trowableIron" src="./medien/items/huffeisen.png" alt="h">
             <div id="m2_barContainer">
                 <div id="m2_targetZone"></div>
                 <div id="m2_powerBar"></div>
