--- a/project/index.html
+++ b/project/index.html
@@ -171,7 +171,11 @@
         <div class="button" style="bottom: 2vh; margin-left: 85vw;" onclick="switchToPlay(2)">Leave</div>        
     
     </div>
-    <div class="sideBoxes" id="world_side_options"></div>
+    <div class="sideBoxes" id="world_side_options">
+        <div class="button" onclick="switchToStart()">Home</div>
+        <div class="button" onclick="switchToSettings()">Settings</div>
+        <div class="button" onclick="closeOptions()">Back</div>
+    </div>
 
     <div class="sideBoxes" id="saloon_side">
         <div></div>
