fertigstellung:saloon ready

--- a/project/index.html
+++ b/project/index.html
@@ -28,13 +28,21 @@
         </div>
     </div>
     <div class="sideBoxes" id="settings_side">
+        <button onclick="resetPlayerData()" id="resetBtn">Reset</button>
         <h1 class="title">Settings:</h1>
         <div class="layoutBox_basic">
             <div class="classicBox" style="height: 60vh; width: 37vw;">
                 <h1>HowTo:</h1>
+                <h4>Control Skullhead with the arrow keys on your keyboard.</h4>
+                <img style="width: 10vw; height: auto;" src="./medien/items/keys.png" alt="d">
+                <h4>Use [STRG] to continue in conversations or to skip the dialog.</h4>
             </div>
             <div class="classicBox" style="height: 60vh; width: 37vw;">
-                <h1>SoundSettings:</h1>
+                <h1>Goal:</h1>
+                <h4>Skullhead needs to earn respect to enter the saloon. But he wont get in all naked...</h4>
+                <h4>Unlock new pieces of clothing by playing the minigames to earn money!</h4>
+                <h4>The golden dot always points to your next destination to finish the story.</h4>
+                <h4>Unlock all items to save yourself a spot in the saloon...</h4>
             </div>
         </div>
         <div class="button" onclick="switchToStart()">Back</div>
@@ -178,7 +186,7 @@
     </div>
 
     <div class="sideBoxes" id="saloon_side">
-        <div></div>
+        
     </div>
 
     <div class="sideBoxes" id="minigame1_geier">
